sort.dutchflag.DutchFlagAlgo.scala.error
Erreur de compilation :
DutchFlagAlgo:9: error: not found: value BlancRouge
    case RED => echange(apresBleu,BlancRouge);blancRouge=blancRouge +1
                                  ^